# ExperimentProject

./: .gitignore  pyproject.toml  requirements.txt  run.ipynb  run.py  unit_test.py
core/: abstract.py  experiment.py  load.py  master_config.py  schema.py  unit_test.py
core/dataset/: data_server.py  datamodule.py  dataset.py  dataset_config.py  loader_off.py  new_datamodule.py  new_dataset.py  registry.py  schema.py  unit_test.py
core/dataset/data/TSB_AD_U/: raw_getter.py
core/dataset/data/UCR_Anomaly_Detection/: raw_getter.py
core/dataset/data/UCR_Classification/: raw_getter.py
core/dataset/loader/: TSB_AD_U.py  UCR_Anomaly_Detection.py
core/dataset/preprocessing/: preprocess.py  preprocess_config.py  registry.py  schema.py
core/dataset/preprocessing/filter/: post_filter.py  pre_filter.py
core/metrics/: metrics.py  metrics_config.py  registry.py  unit_test.py
core/metrics/types/: regression.py
core/model/: model_config.py  model_control.py  registry.py  unit_test.py
core/saving/: load.py  save.py  saving.py  saving_config.py  schema.py  unit_test.py
core/storage/: load.py  save.py  unit_test.py
core/trainer/: registry.py  schema.py  trainer.py  trainer_config.py  unit_test.py
core/trainer/components/: checkpoint_manager.py  epoch_processor.py  loss_computer.py  progress_display.py
modules/: colored_print.py  device_resolve.py  plotter.py  savefolder.py  tensor_normalization.py
modules/email_notification/: config.example.json  email_sender.py
script/: bulk_metrics_compute.py  output_checking.py  train_model.py
(+24 files in other folders)
