[project]
name = "research-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "stumpy>=1.14.1",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
