[project]
name = "research-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy==2.4.6",
    "pandas>=3.0.3",
    "stumpy>=1.14.1",
    "torch==2.6.0+cu124",
    "tqdm>=4.68.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.uv]
index-strategy = "unsafe-best-match"
